k8s-cd/service-mesh/01-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: yas-1
spec:
  mtls:
    mode: STRICT
