k8s-cd/service-mesh/04-curl-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-client
  namespace: yas-1
  labels:
    app: curl-client
spec:
  serviceAccountName: curl-client
  containers:
    - name: curl
      image: curlimages/curl:8.10.1
      command: ["sleep", "infinity"]
